Use fixed-top navbar to avoid issues with stretching in hamburger mode.

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -30,12 +30,12 @@ body {
 }
 
 .jumbotron-smaller {
-    height: 16em;
+    height: 20em;
 }
 
 @media (min-width: 576px) {
     .jumbotron-smaller {
-        height: 20em;
+        height: 24em;
     }
 }
 
